--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -2,8 +2,7 @@
 
 <html>
 <head>
-	<!-- TODO: make css -->
-	<!-- <link href="{{url_for('static', filename='styles/main.css')}}" rel = "stylesheet" type="text/css" /> -->
+	<link href="{{url_for('static', filename='style.css')}}" rel = "stylesheet" type="text/css" />
 </head>
 
 <body>
