--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -2,16 +2,33 @@
 
 <html>
 <head>
+  	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.1/css/all.css">
 	<link href="{{url_for('static', filename='style.css')}}" rel = "stylesheet" type="text/css" />
 </head>
 
 <body>
-	<!-- TODO: add header / footer?  -->
 
-	<h1>Cross Stitch Information</h1>
+	<header>
+    <nav>
+      <a href="#"><span class="fa fa-home"></span></a>
+	  <a href="#">Threads</a>
+	  <a href="#">Projects</a>
+	  <a href="#">About</a>
+    </nav>
+  </header>
 
+	<!-- TODO: add header here -->
+
+	<div class="title">
+		<h1>Thread Organiser!</h1>
+	</div>
+
+	<div class="project_thread_choice">
 	<h2> Threads </h2>
-	<h2> Projects </h2>
+		<h2> Projects </h2>
+	</div>
+
+	<!-- TODO: add footer here -->
 
 </body>
 </html>
