Added first draft of threads home page'

--- a/templates/threads_home.html
+++ b/templates/threads_home.html
@@ -17,22 +17,7 @@
     </nav>
   </header>
 
-	<!-- TODO: add header here -->
-
-	<div class="title">
-		<h1>Thread Organiser!</h1>
-	</div>
-
-	<div class="project_thread_choice">
-	<h2> 
-		<a href="{{ url_for('thread_home')}}">
-			Threads
-		</a>
-	</h2>
-		<h2> Projects </h2>
-	</div>
-
-	<!-- TODO: add footer here -->
+  <h1> Threads </h1>
 
 </body>
 </html>
