Added very simple thread page

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -5,7 +5,9 @@
 </head>
 
 <body>
-	<h1> Threads </h1>
+	<h1> 
+		<a href="{{url_for('threads_main')}}"> Threads </a>
+	</h1>
 	<h2> Add New </h2>
 	<h2> Adjust Quantities </h2>
 	<h2> View </h2>
