--- a/templates/threads_main.html
+++ b/templates/threads_main.html
@@ -5,8 +5,11 @@
 </head>
 
 <body>
-	<h1> Threads </h1>
-	<h2> Add New </h2>
+	<h1> 
+		Threads </h1>
+	<h2>
+		<a href="{{url_for('threads_add')}}"> Add New </a>
+	</h2>
 	<h2> Adjust Quantities </h2>
 	<h2> View </h2>
 
