--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -8,7 +8,9 @@
 	<h1> 
 		<a href="{{url_for('threads_main')}}"> Threads </a>
 	</h1>
-	<h2> Add New </h2>
+	<h2> 
+		<a href="{{url_for('threads_add')}}"> Add New </a>
+	</h2>
 	<h2> Adjust Quantities </h2>
 	<h2> View </h2>
 	<h1> Projects </h1>
