Added basic view link page

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -12,7 +12,9 @@
 		<a href="{{url_for('threads_add')}}"> Add New </a>
 	</h2>
 	<h2> Adjust Quantities </h2>
-	<h2> View </h2>
+	<h2>
+		<a href="{{url_for('threads_view')}}"> View </a>
+	</h2>
 	<h1> Projects </h1>
 	<h2> Add New </h2>
 	<h2> Mark Complete </h2>
