--- a/templates/threads_main.html
+++ b/templates/threads_main.html
@@ -11,7 +11,9 @@
 		<a href="{{url_for('threads_add')}}"> Add New </a>
 	</h2>
 	<h2> Adjust Quantities </h2>
-	<h2> View </h2>
+	<h2> 
+		<a href="{{url_for('threads_view')}}"> View </a>
+	</h2>
 
 </body>
 </html>
