Adding javascript later

--- a/templates/threads_main.html
+++ b/templates/threads_main.html
@@ -32,6 +32,8 @@
 		<tr>
 			<th> DMC </th>
 			<th> Amount Owned </th>
+			<!-- Doing the dodgy manually adding increment / decrement buttons
+	   for amount. Fix to use javascript later! --!>
 		</tr>
 		{% for thread in all_threads %}
 		<tr>
